--- a/index.html
+++ b/index.html
@@ -1315,7 +1315,7 @@
                         expedita rem libero quos voluptas qui recusandae quasi
                         omnis! Odit, qui vel? Deserunt quia accusantium vel
                         quisquam reiciendis nemo cum eos. Nemo, vero quas. Ipsa
-                        quisquam soluta rerum minus ipsam praesentium sequi
+                        quisquam soluta rerum minus im praesentium sequi
                         nobis. Repellendus nostrum corrupti dolorem veritatis.
                         Doloremque. Eos et, provident officia est earum ipsa
                         tempore esse accusamus magni nobis dolore quae?
