--- a/dash/index.html
+++ b/dash/index.html
@@ -215,7 +215,7 @@
     // Function to retrieve messages from the backend
     async function getMessages() {
         try {
-            const response = await fetch("http://localhost:5000/api/message", {
+            const response = await fetch("https://my-brand-api-6my7.onrender.com/api/message", {
                 method: "GET",
                 headers: {
                     "Content-Type": "application/json",
@@ -291,7 +291,7 @@
     // Function to delete a message
     async function deleteMessage(messageId) {
         try {
-            const response = await fetch(`http://localhost:5000/api/message/${messageId}`, {
+            const response = await fetch(`https://my-brand-api-6my7.onrender.com/api/message/${messageId}`, {
                 method: "DELETE",
                 headers: {
                     "Content-Type": "application/json",
