--- a/dash/index.html
+++ b/dash/index.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" href="https://cdn.syncfusion.com/ej2/material.css">
 <script src="https://cdn.syncfusion.com/ej2/dist/ej2.min.js"></script>
 
+<link rel="icon" href=
+"../assets/images/igor.png"
+          type="image/x-icon">
+
   
 </head>
 <body>
@@ -40,10 +44,10 @@
                   <button class="navbar-link" data-nav-link>Blogs</button>
                 </li>
     
-                <!-- <li class="navbar-item">
+                <li class="navbar-item">
                   <ion-icon name="people"></ion-icon>
                   <button class="navbar-link" data-nav-link>Users</button>
-                </li> -->
+                </li>
               </ul>
             </nav>
             <button class="acc"> Account setup</button>
@@ -52,7 +56,7 @@
           <section class="dashboard-content active" data-page="dashboard">
             <div class="headd">
               
-              <span>Igor IHIMBAZWE &nbsp;</span>  <ion-icon name="person"></ion-icon>
+              <span>USER &nbsp;</span>  <ion-icon name="person"></ion-icon>
             </div>
             <main>
             <div class="header">
@@ -93,7 +97,7 @@
           <!--Messages-->
           <section class="message-content" data-page="messages">
             <div class="headd">
-              <span>Igor IHIMBAZWE &nbsp;</span>  <ion-icon name="person"></ion-icon>
+              <span>USER &nbsp;</span>  <ion-icon name="person"></ion-icon>
             </div>
             <main>
               <h1>MESSAGES</h1>
@@ -105,7 +109,7 @@
             <!-- #BLOG PART -->
             <section class="blog-content" data-page="blogs">
               <div class="headd">
-                <span>Igor IHIMBAZWE &nbsp;</span>  <ion-icon name="person"></ion-icon>
+                <span>USER &nbsp;</span>  <ion-icon name="person"></ion-icon>
               </div>
               <main>
       <div class="todo-app">
