--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="icon" href=
+"../assets/images/igor.png"
+          type="image/x-icon">
   </head>
 
   <body>
