--- a/dash/index.html
+++ b/dash/index.html
@@ -50,7 +50,7 @@
                 </li>
               </ul>
             </nav>
-            <button class="acc"> <a href="../user.html">MAIN</a></button>
+            <a href="../user.html"><button class="acc"> MAIN</button></a>
           </div>
           <!--Dashboard-->
           <section class="dashboard-content active" data-page="dashboard">
