--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
     
       const updateTaskContainer = async () => {
         try {
-          const response = await fetch("http://localhost:5000/api/blog/", {
+          const response = await fetch("https://my-brand-api-6my7.onrender.com/api/blog/", {
             method: "GET",
           });
     
