--- a/user.html
+++ b/user.html
@@ -47,7 +47,7 @@
 
             
 
-            <a href="dash/index.html" class="dashbtn" ><p class="title"><b>DASHBOARD</b></p></a>
+            <a href="#" class="dashbtn" ><p class="title"><b>DASHBOARD</b></p></a>
           </div>
 
           <button class="info_more-btn" data-sidebar-btn>
